--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: lightcyan;
 }
 
 @media (prefers-reduced-motion: no-preference) {
